WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182744
REGRESSION(
r228313
): Membuster | macOS | All Devices | 1.5 MB
https://bugs.webkit.org/show_bug.cgi?id=182744
Summary
REGRESSION(r228313): Membuster | macOS | All Devices | 1.5 MB
Antti Koivisto
Reported
2018-02-13 13:39:45 PST
Need to respect low memory notifications explicitly now that the compiled selectors are not part of RuleDatas.
Attachments
patch
(10.39 KB, patch)
2018-02-13 15:31 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(10.43 KB, patch)
2018-02-13 18:36 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-02-13 15:28:17 PST
<
rdar://problem/37463770
>
Antti Koivisto
Comment 2
2018-02-13 15:31:19 PST
Created
attachment 333736
[details]
patch
EWS Watchlist
Comment 3
2018-02-13 15:32:28 PST
Attachment 333736
[details]
did not pass style-queue: ERROR: Source/WebCore/css/StyleSheetContents.h:89: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:433: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:466: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:478: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4
2018-02-13 18:36:41 PST
Created
attachment 333758
[details]
patch
EWS Watchlist
Comment 5
2018-02-13 18:38:09 PST
Attachment 333758
[details]
did not pass style-queue: ERROR: Source/WebCore/css/StyleSheetContents.h:89: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:433: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:466: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/css/StyleSheetContents.cpp:478: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2018-02-13 20:38:38 PST
Comment on
attachment 333758
[details]
patch Clearing flags on attachment: 333758 Committed
r228453
: <
https://trac.webkit.org/changeset/228453
>
WebKit Commit Bot
Comment 7
2018-02-13 20:38:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug