REGRESSION(r228313): Membuster | macOS | All Devices | 1.5 MB https://bugs.webkit.org/show_bug.cgi?id=182744 <rdar://problem/37463770>

Reviewed by Zalan Bujtas.

We need to respect low memory notifications explicitly now that the compiled selectors are not part of RuleData.

* css/StyleRule.cpp:
(WebCore::StyleRule::StyleRule):
* css/StyleRule.h:

Switch to std::unique_ptr<[]> from Vector to avoid unnecessary bloat.

* css/StyleSheetContents.cpp:
(WebCore::traverseRulesInVector):
(WebCore::StyleSheetContents::traverseRules const):

Add a rule traversal function, similar to the existing traverseSubresources.

(WebCore::StyleSheetContents::traverseSubresources const):

Use traverseRules to implement traverseSubresources.

(WebCore::traverseSubresourcesInRules): Deleted.
* css/StyleSheetContents.h:
* page/MemoryRelease.cpp:
(WebCore::releaseCriticalMemory):
* style/StyleScope.cpp:
(WebCore::Style::Scope::releaseMemory):

Release memory for compiled selectors on memory notification.

* style/StyleScope.h:


Canonical link: https://commits.webkit.org/198544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228453 268f45cc-cd09-0410-ab3c-d52691b4dbfc